...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Register"
            android:textSize="24sp"
            android:textColor="@color/colorBlack"
...

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_below="@id/relayout1"
        android:layout_width="wrap_content"
...

            <Spinner
                android:id="@+id/designationSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <Spinner
                android:id="@+id/genderSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <EditText
                android:id="@+id/firstNameEditView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <EditText
                android:id="@+id/lastNameEditView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <EditText
                android:id="@+id/nricfinEditView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <EditText
                android:id="@+id/dobEditView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <EditText
                android:id="@+id/nationalityEditView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <EditText
                android:id="@+id/homeAddressEditView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <EditText
                android:id="@+id/postalCodeEditView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <EditText
                android:id="@+id/contactNumberEditView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <EditText
                android:id="@+id/emailEditView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <EditText
                android:id="@+id/usernameEditView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <EditText
                android:id="@+id/passwordEditView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <EditText
                android:id="@+id/verifyPasswordEditView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <Button
                android:id="@+id/registerSaveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Save Registration Details"
                android:textStyle="bold"
                android:textSize="16sp"
...
