...
        android:hint="Password"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/loginusereditview"
        android:ems="16"/>

    <Button
        android:id="@+id/registerbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Register"
        android:layout_below="@+id/passwordeditview"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
...
