<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.fish.escpart1.CameraActivity"
    tools:showIn="@layout/activity_camera">
    <ImageView
        android:id = "@+id/imagePlaceholderCamera"
        android:background="@color/colorPrimary"
        android:layout_height="320dp"
        android:layout_width="320dp"
        android:layout_marginTop="32dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        />
    <Button
        android:id = "@+id/takePictureButtonCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "Take a picture"
        android:layout_below="@id/imagePlaceholderCamera"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        />
    <Button
        android:id="@+id/registerButtonCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="REGISTER"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/takePictureButtonCamera"
        android:visibility="invisible"/>
    <ImageView
        android:id="@+id/textimage_camera_activity"
        android:layout_below="@id/registerButtonCamera"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:layout_width="240dp"
        android:layout_height="96dp" />
    <EditText
        android:id = "@+id/textans_camera_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textimage_camera_activity"
        android:hint="@string/textAnsHint"
        />

</RelativeLayout>
</ScrollView>